--- a/Machine_BubblePoint_4.3/src/report/report.fxml
+++ b/Machine_BubblePoint_4.3/src/report/report.fxml
@@ -20,7 +20,7 @@
          </font>
       </Button>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff1a" height="180.0" layoutX="384.0" layoutY="432.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" width="733.0" AnchorPane.leftAnchor="384.0" />
-      <AnchorPane fx:id="pagination1" layoutX="27.0" layoutY="79.4375" maxHeight="658.0" maxWidth="904.0" minHeight="422.0" minWidth="744.0" prefHeight="607.0" prefWidth="888.0" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="27.0" />
+      <AnchorPane fx:id="pagination1" layoutX="23.0" layoutY="79.4375" maxHeight="658.0" maxWidth="904.0" minHeight="422.0" minWidth="744.0" prefHeight="537.0" prefWidth="892.0" AnchorPane.bottomAnchor="107.0" AnchorPane.leftAnchor="23.0" />
       <AnchorPane fx:id="slides" layoutX="393.0" layoutY="450.0" prefHeight="151.0" prefWidth="715.0" visible="false" />
       <AnchorPane fx:id="ancgauge1" layoutX="1071.0" layoutY="523.0" prefHeight="191.0" prefWidth="275.0" />
       <ScrollPane fx:id="scrfilename" layoutX="965.0" layoutY="190.0" maxHeight="227.0" maxWidth="555.0" minHeight="208.0" minWidth="335.0" prefHeight="208.0" prefWidth="375.0" styleClass="scrl" stylesheets="@../application/application.css" />
@@ -129,6 +129,78 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
+      <AnchorPane fx:id="anc" layoutX="27.0" layoutY="611.0" prefHeight="119.0" prefWidth="895.0">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2a91d8" height="48.0" stroke="TRANSPARENT" strokeType="INSIDE" width="194.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2b4dd6" height="48.0" layoutX="193.0" stroke="TRANSPARENT" strokeType="INSIDE" width="337.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0d3c88" height="48.0" layoutX="530.0" stroke="TRANSPARENT" strokeType="INSIDE" width="361.0" />
+            <ImageView fx:id="micropic" fitHeight="50.0" fitWidth="50.0" layoutX="67.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@micro.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="mizopic" fitHeight="50.0" fitWidth="50.0" layoutX="337.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@mizo.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="macropic" fitHeight="50.0" fitWidth="50.0" layoutX="699.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@macro.png" />
+               </image>
+            </ImageView>
+            <Text fill="#fcfcfc" layoutX="49.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Micro-Pore">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
+            <Text fill="#fcfcfc" layoutX="314.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mizo-Pore">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
+            <Text fill="#fcfcfc" layoutX="661.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Macro-Pore">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
+            <Text fill="#030000" layoutX="5.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
+               <font>
+                  <Font name="Calibri" size="14.0" />
+               </font>
+            </Text>
+            <Text fill="#030000" layoutX="190.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2">
+               <font>
+                  <Font name="Calibri" size="14.0" />
+               </font>
+            </Text>
+            <Text fill="#030000" layoutX="523.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="50">
+               <font>
+                  <Font name="Calibri" size="14.0" />
+               </font>
+            </Text>
+            <Text fill="#030000" layoutX="870.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="200">
+               <font>
+                  <Font name="Calibri" size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="microlab" fill="#0000009c" layoutX="57.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="70.00000062212348">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
+            <Text fx:id="mizolab" fill="#0000009c" layoutX="327.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="70.00000062212348">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
+            <Text fx:id="macrolab" fill="#0000009c" layoutX="689.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="70.00000062212348">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
+         </children>
+      </AnchorPane>
    </children>
    <stylesheets>
       <URL value="@../application/application.css" />
