--- a/Machine_BubblePoint_4.3/src/admin_setting/admin_screen1.fxml
+++ b/Machine_BubblePoint_4.3/src/admin_setting/admin_screen1.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="580.0" prefWidth="1368.0" styleClass="bgwhite" stylesheets="@../userinput/Nnew_application.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="admin_setting.Admin_screen1Controller">
+<AnchorPane prefHeight="580.0" prefWidth="1368.0" styleClass="bgwhite" stylesheets="@../userinput/Nnew_application.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin_setting.Admin_screen1Controller">
    <children>
       <Rectangle arcHeight="300.0" arcWidth="30.0" fill="#1f93ff00" height="28.0" layoutX="266.0" layoutY="294.0" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" style="-fx-fill: white;" width="46.0" />
       <JFXToggleButton fx:id="valvelc" alignment="BASELINE_CENTER" layoutX="257.0" layoutY="280.0" text=" " toggleColor="#0e3c87" toggleLineColor="WHITE" unToggleLineColor="#99999903" />
@@ -162,45 +161,45 @@
       <Line endX="10.0" layoutX="401.0" layoutY="237.0" rotate="90.0" startX="-50.0" stroke="#bfb9b9" strokeWidth="2.0" />
       <Line endX="10.0" layoutX="402.0" layoutY="309.0" rotate="90.0" startX="-50.0" stroke="#bfb9b9" strokeWidth="2.0" />
       <Line endX="10.0" layoutX="401.0" layoutY="386.0" rotate="90.0" startX="-50.0" stroke="#bfb9b9" strokeWidth="2.0" />
-      <Label layoutX="935.0" layoutY="140.0" styleClass="col-gray70" text="Off" textFill="WHITE">
+      <Label layoutX="935.0" layoutY="140.0" styleClass="col-gray70" text="Off" textFill="WHITE" visible="false">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="1041.0" layoutY="140.0" styleClass="col-gray70" text="On" textFill="WHITE">
+      <Label layoutX="1041.0" layoutY="140.0" styleClass="col-gray70" text="On" textFill="WHITE" visible="false">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Rectangle arcHeight="300.0" arcWidth="30.0" fill="#1f93ff00" height="28.0" layoutX="992.0" layoutY="144.0" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" style="-fx-fill: white;" width="46.0" />
-      <JFXToggleButton fx:id="valvecpre" alignment="BASELINE_CENTER" layoutX="983.0" layoutY="130.0" text=" " toggleColor="#0e3c87" toggleLineColor="WHITE" unToggleLineColor="#99999903" />
-      <Label layoutX="774.0" layoutY="34.0" text="Select Crossover" textFill="#0e3c87">
+      <Rectangle arcHeight="300.0" arcWidth="30.0" fill="#1f93ff00" height="28.0" layoutX="992.0" layoutY="144.0" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" style="-fx-fill: white;" visible="false" width="46.0" />
+      <JFXToggleButton fx:id="valvecpre" alignment="BASELINE_CENTER" layoutX="983.0" layoutY="130.0" text=" " toggleColor="#0e3c87" toggleLineColor="WHITE" unToggleLineColor="#99999903" visible="false" />
+      <Label layoutX="774.0" layoutY="34.0" text="Select Crossover" textFill="#0e3c87" visible="false">
          <font>
             <Font size="25.0" />
          </font>
       </Label>
-      <Line endX="250.0" layoutX="872.0" layoutY="117.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" />
-      <Line endX="250.0" layoutX="872.0" layoutY="193.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" />
-      <Label layoutX="771.0" layoutY="138.0" styleClass="col-gray70" text="Pressure" textFill="#bcbcbc">
+      <Line endX="250.0" layoutX="872.0" layoutY="117.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" visible="false" />
+      <Line endX="250.0" layoutX="872.0" layoutY="193.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" visible="false" />
+      <Label layoutX="771.0" layoutY="138.0" styleClass="col-gray70" text="Pressure" textFill="#bcbcbc" visible="false">
          <font>
             <Font size="25.0" />
          </font>
       </Label>
-      <Line layoutX="622.0" layoutY="269.0" rotate="90.0" startX="280.0" stroke="#bfb9b9" strokeWidth="2.0" />
-      <Label layoutX="935.0" layoutY="216.0" styleClass="col-gray70" text="Off" textFill="WHITE">
+      <Line layoutX="622.0" layoutY="269.0" rotate="90.0" startX="280.0" stroke="#bfb9b9" strokeWidth="2.0" visible="false" />
+      <Label layoutX="935.0" layoutY="216.0" styleClass="col-gray70" text="Off" textFill="WHITE" visible="false">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="1041.0" layoutY="216.0" styleClass="col-gray70" text="On" textFill="WHITE">
+      <Label layoutX="1041.0" layoutY="216.0" styleClass="col-gray70" text="On" textFill="WHITE" visible="false">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Rectangle arcHeight="300.0" arcWidth="30.0" fill="#1f93ff00" height="28.0" layoutX="992.0" layoutY="220.0" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" style="-fx-fill: white;" width="46.0" />
-      <JFXToggleButton fx:id="valvecflow" alignment="BASELINE_CENTER" layoutX="983.0" layoutY="206.0" text=" " toggleColor="#0e3c87" toggleLineColor="WHITE" unToggleLineColor="#99999903" />
-      <Line endX="250.0" layoutX="872.0" layoutY="269.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" />
-      <Label layoutX="771.0" layoutY="214.0" styleClass="col-gray70" text="Flov" textFill="#bcbcbc">
+      <Rectangle arcHeight="300.0" arcWidth="30.0" fill="#1f93ff00" height="28.0" layoutX="992.0" layoutY="220.0" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" style="-fx-fill: white;" visible="false" width="46.0" />
+      <JFXToggleButton fx:id="valvecflow" alignment="BASELINE_CENTER" layoutX="983.0" layoutY="206.0" text=" " toggleColor="#0e3c87" toggleLineColor="WHITE" unToggleLineColor="#99999903" visible="false" />
+      <Line endX="250.0" layoutX="872.0" layoutY="269.0" startX="-100.0" stroke="#bfb9b9" strokeWidth="2.0" visible="false" />
+      <Label layoutX="771.0" layoutY="214.0" styleClass="col-gray70" text="Flov" textFill="#bcbcbc" visible="false">
          <font>
             <Font size="25.0" />
          </font>
