--- a/Machine_BubblePoint_4.3/src/toast/Info.fxml
+++ b/Machine_BubblePoint_4.3/src/toast/Info.fxml
@@ -23,7 +23,7 @@
          </font>
       </Label>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e3e4e539" height="66.0" layoutY="164.0" stroke="#c9c3c3" strokeType="INSIDE" strokeWidth="0.0" width="442.0" />
-      <Button fx:id="btnclose" layoutX="401.0" layoutY="4.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="36.0" style="-fx-background-color: trasperant;" text="X" textFill="#000000a6">
+      <Button fx:id="btnclose" layoutX="401.0" layoutY="4.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="36.0" text="X" textFill="#000000a6">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
