--- a/Machine_BubblePoint_4.3/src/report/first.fxml
+++ b/Machine_BubblePoint_4.3/src/report/first.fxml
@@ -52,15 +52,6 @@
       </Label>
       <Line endX="430.0" layoutX="882.0" layoutY="609.0" stroke="#2a91d8" />
       <Line endX="750.0" layoutX="64.0" layoutY="169.0" stroke="#2a91d8" />
-      <Label layoutX="75.0" layoutY="128.0" prefHeight="35.0" prefWidth="194.0" text="Samples" wrapText="true">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-         <styleClass>
-            <String fx:value="font-montserrat-semiBold" />
-            <String fx:value="col-gray70" />
-         </styleClass>
-      </Label>
       <Line endX="750.0" layoutX="70.0" layoutY="707.0" stroke="#2a91d8" />
       <Label layoutX="53.0" layoutY="22.0" prefHeight="35.0" prefWidth="194.0" styleClass="font-montserrat-semiBold" text="My Cloud" textFill="WHITE" wrapText="true">
          <font>
@@ -137,6 +128,8 @@
                </cursor>
             </ImageView>
          </graphic></Button>
+      <Rectangle arcHeight="500.0" arcWidth="30.0" fill="#2197ff00" height="35.0" layoutX="61.0" layoutY="126.0" stroke="#bfb9b9" strokeType="INSIDE" strokeWidth="2.0" width="235.0" />
+      <TextField fx:id="searchsample" layoutX="71.0" layoutY="128.0" prefHeight="32.0" prefWidth="217.0" promptText="search sample.." styleClass="uinputtextbox1" />
    </children>
    <stylesheets>
       <URL value="@../application/application.css" />
