--- a/Machine_BubblePoint_4.3/src/report/report.fxml
+++ b/Machine_BubblePoint_4.3/src/report/report.fxml
@@ -46,7 +46,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="964.0" layoutY="401.0" prefHeight="48.0" prefWidth="221.0" styleClass="col-gray70" text="Average Bubble Diameter   " textFill="#646161">
+      <Label layoutX="964.0" layoutY="401.0" prefHeight="48.0" prefWidth="221.0" text="Average Bubble Diameter   " textFill="#2a8fd8">
          <font>
             <Font size="18.0" />
          </font>
@@ -131,35 +131,35 @@
       </Label>
       <AnchorPane fx:id="anc" layoutX="27.0" layoutY="611.0" prefHeight="119.0" prefWidth="895.0">
          <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2a91d8" height="48.0" stroke="TRANSPARENT" strokeType="INSIDE" width="194.0" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2b4dd6" height="48.0" layoutX="193.0" stroke="TRANSPARENT" strokeType="INSIDE" width="337.0" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0d3c88" height="48.0" layoutX="530.0" stroke="TRANSPARENT" strokeType="INSIDE" width="361.0" />
-            <ImageView fx:id="micropic" fitHeight="50.0" fitWidth="50.0" layoutX="67.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true" visible="false">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="GAINSBORO" height="48.0" stroke="TRANSPARENT" strokeType="INSIDE" width="194.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d0d0d0" height="48.0" layoutX="193.0" stroke="TRANSPARENT" strokeType="INSIDE" width="337.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="SILVER" height="48.0" layoutX="530.0" stroke="TRANSPARENT" strokeType="INSIDE" width="361.0" />
+            <ImageView fx:id="micropic" fitHeight="50.0" fitWidth="50.0" layoutX="67.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@micro.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="mizopic" fitHeight="50.0" fitWidth="50.0" layoutX="337.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true" visible="false">
+            <ImageView fx:id="mizopic" fitHeight="50.0" fitWidth="50.0" layoutX="337.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@mizo.png" />
+                  <Image url="@micro.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="macropic" fitHeight="50.0" fitWidth="50.0" layoutX="699.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true" visible="false">
+            <ImageView fx:id="macropic" fitHeight="50.0" fitWidth="50.0" layoutX="699.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@macro.png" />
+                  <Image url="@micro.png" />
                </image>
             </ImageView>
-            <Text fill="#fcfcfc" layoutX="49.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Micro-Pore">
+            <Text fill="GREY" layoutX="49.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Micro-Pore">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Text>
-            <Text fill="#fcfcfc" layoutX="314.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mizo-Pore">
+            <Text fill="GREY" layoutX="314.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Miso-Pore">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Text>
-            <Text fill="#fcfcfc" layoutX="661.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Macro-Pore">
+            <Text fill="GREY" layoutX="661.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Macro-Pore">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
